# Pong

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: main.yml
CMake/: arm-none-eabi-toolchain.cmake
Pong/Includes/: mk_pong.h  mk_pong_constants.h  mk_pong_data.h  mk_pong_types.h
Pong/Make/: makefile
Pong/Sources/: mk_application_data.c
Pong/Sources/Pong/: mk_pong_data.c  mk_pong_init.c  mk_pong_initGame.c  mk_pong_listenApplication.c  mk_pong_listenPlayground.c  mk_pong_main.c  mk_pong_paintButton.c  mk_pong_paintPlayground.c  mk_pong_reset.c
Pong/Storage/: license.md  readme.md
